--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -64,7 +64,7 @@
   </div>
 </div>
 
-<!--<div class="py-5 mt-3">-->
+<!--<div class="py-5 mt-3 page-container">-->
 
   <!--<div class="container">-->
     <!--<div class="row">-->
