--- a/src/app/sites/about/about.component.html
+++ b/src/app/sites/about/about.component.html
@@ -1,8 +1,8 @@
 <div class="view view-page-header">
   <div class="full-bg-img">
     <div class="mask flex-center rgba-blue-strong">
-      <div class="container">
-        <div class="white-text wow fadeIn">
+      <div class="container flex-center">
+        <div class="white-text wow fadeIn header-page-container">
 
           <h2 class="header-page">O studiach</h2>
 
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="py-5 mt-3 page-container-min" id="about-container">
+<div class="py-5 mt-3 page-container page-container-min" id="about-container">
 
   <div class="container">
     <div class="row" id="o-studiach-sections">
@@ -171,5 +171,6 @@
     </div>
   </div>
   </div>
-
 </div>
+
+<app-footer-banner [type]="'banner'"></app-footer-banner>
