--- a/src/app/sites/home/home.component.scss
+++ b/src/app/sites/home/home.component.scss
@@ -1,3 +1,6 @@
+#home-1 h2, #home-1 h5 {
+  text-shadow: rgba(0,0,0,0.75) 1px 1px 0px;
+}
 #home-3 ul {
   text-align: center;
   //padding
@@ -177,13 +180,13 @@
 #home-1 {
   background-color: #2196f3;
   // background-image: url("/assets/stefan-stefancik-297983-unsplash.jpg");
-  background-image: url("https://images.pexels.com/photos/914931/pexels-photo-914931.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-image: url("https://images.unsplash.com/photo-1514996550219-62672472d03b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
   background-position: 0% 50%;
   // background-size: 130%;
 }
 
 #home-1 {
-  color: rgba(255,255,255, 0.85);
+  color: rgba(255,255,255,1);
 }
 
 #home-1 .icon-slider {
@@ -316,6 +319,40 @@ mdb-card-body p {
 }
 .feature {
   //padding-bottom: 5rem !important;
+}
+
+#top-news {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  .top-news-inner {
+    // background-color: #2196f3;
+    padding-top: 76px;
+    background-color: rgba(0,0,0,0.6);  
+    .top-news-announcement-banner {
+      color: rgba(255,255,255,0.9);
+      // font-weight: bold;
+      text-align: left;
+      width: 100%;
+      padding: 12px 0;
+      font-size: 1em;
+      .row {
+        margin: 0;
+      }
+      .info {
+
+      }
+      a.action {
+        font-weight: bold;
+        color: rgba(255,255,255,0.95);
+      }
+      a.action:hover {
+        color: rgba(255,255,255,0.75);
+      }
+
+    }
+  }
 }
 
 
