--- a/src/app/sites/panel/shared/files-manager/file-explorer/file-explorer.component.html
+++ b/src/app/sites/panel/shared/files-manager/file-explorer/file-explorer.component.html
@@ -1,5 +1,7 @@
-<script src="models/file-element.model.ts"></script>
-<nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar blue-gradient" id="toolbar">
+<!-- <script src="models/file-element.model.ts"></script> -->
+<nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar blue-gradient" 
+  id="toolbar" 
+  [ngClass]="{'navbar-edit-user-access': mode === 'edit-user-access' }">
   <!--<a class="navbar-brand" href="#"><strong>Pliki</strong></a>-->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,21 +13,22 @@
         <a class="nav-link" (click)="navigateUp()" *ngIf="canNavigateUp">
           <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
         </a>
-        <!---->
       </li>
       <li class="nav-item mr-auto">
-        <span class="nav-link">{{path || 'Pliki'}}</span>
+        <span class="nav-link">
+          {{path || 'Pliki'}}
+        </span>
       </li>
     </ul>
-    <ul class="navbar-nav nav-flex-icons" *ngIf="user.role === 'admin' || user.role === 'moderator'">
-      <li class="nav-item" >
+    <ul class="navbar-nav nav-flex-icons" *ngIf="mode === 'edit-files'">
+      <li class="nav-item" mdbTooltip="Utwórz nowy folder" container="body" placement="top">
         <a class="nav-link" (click)="openNewFolderDialog()">
-          <i class="fa fa-folder-o" aria-hidden="true"></i>
+            <i class="fas fa-folder-plus"></i>
         </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" mdbTooltip="Prześlij pliki" container="body" placement="top">
         <a class="nav-link" (click)="openUploadDialog()">
-          <i class="fa fa-upload" aria-hidden="true"></i>
+          <i class="fas fa-cloud-upload-alt"></i>
         </a>
       </li>
     </ul>
@@ -50,23 +53,26 @@
 
       <tr mdbTableCol 
         *ngFor="let element of fileElements | orderBy: orderType : true"
-        [ngClass]="{'file-visible': element.is_visible, 'file-invisible': !element.is_visible}">
+        [ngClass]="{
+          'file-visible': element.is_visible && mode === 'edit-user-access', 
+          'file-invisible': !element.is_visible && mode === 'edit-user-access'
+        }">
         <td class="file-icon tr-click" (click)="navigate(element)" ><!-- scope="row" -->
           <i class="fa fa-folder file-or-folder-icon" aria-hidden="true" *ngIf="element.file_type == 'folder' && element.file_extension == null"></i>
           <i
             class="fa file-or-folder-icon"
             [ngClass]="{
-              'fa-file-o': element.file_type === 'file',
-              'fa-file-archive-o': element.file_type === 'archive',
-              'fa-file-audio-o': element.file_type === 'audio',
-              'fa-file-code-o': element.file_type === 'code',
-              'fa-file-excel-o': element.file_type === 'excel',
-              'fa-file-image-o': element.file_type === 'image',
-              'fa-file-pdf-o': element.file_type === 'pdf',
-              'fa-file-powerpoint-o': element.file_type === 'powerpoint',
-              'fa-file-text-o': element.file_type === 'text',
-              'fa-file-video-o': element.file_type === 'video',
-              'fa-file-word-o': element.file_type === 'word'
+              'fas fa-file': element.file_type === 'file',
+              'fas fa-file-archive': element.file_type === 'archive',
+              'fas fa-file-audio': element.file_type === 'audio',
+              'fas fa-file-code': element.file_type === 'code',
+              'fas fa-file-excel': element.file_type === 'excel',
+              'fas fa-file-image': element.file_type === 'image',
+              'fas fa-file-pdf': element.file_type === 'pdf',
+              'fas fa-file-powerpoint': element.file_type === 'powerpoint',
+              'fas fa-file-alt': element.file_type === 'text',
+              'fas fa-file-video': element.file_type === 'video',
+              'fas fa-file-word': element.file_type === 'word'
             }"
             aria-hidden="true"
             *ngIf="element.file_type != 'folder'">
@@ -78,23 +84,49 @@
         <td class="file-modified tr-click" (click)="navigate(element)">
           <span>{{element.updated_at}}</span>
         </td>
-        <td class="file-menu">
-
-          <div class="btn-group" *ngIf="user.role === 'admin' || user.role === 'moderator'">
-            <a color="primary" class="waves-light" (click)="toogleElementVisibility(element)" [mdbTooltip]="visibilityToggleTooltip" placement="bottom">
+        <td class="file-menu" (click)="navigate(element)" [ngClass]="{'clickable': mode === 'view'}">
+          <div class="btn-group" *ngIf="mode === 'edit-user-access'">
+            <a 
+              color="primary"
+              class="waves-light" 
+              (click)="toogleElementVisibility(editAccessAccount ,element)" 
+              [mdbTooltip]="visibilityToggleTooltip"
+              container="body"
+              placement="top">
               <i
-                class="fa" [ngClass]="{'fa-eye': element.is_visible, 'fa-eye-slash': !element.is_visible}" aria-hidden="true"></i>
+                class="fa" 
+                [ngClass]="{'fa-toggle-on': element.is_visible, 'fa-toggle-off': !element.is_visible}" 
+                aria-hidden="true">
+              </i>
               <!-- fa-eye-slash -->
             </a>
           </div>
 
-          <div class="btn-group" *ngIf="user.role === 'user' && element.file_type != 'folder'">
-            <a color="primary" class="waves-light" (click)="downloadFile(element)" mdbTooltip="Pobierz" placement="bottom">
-              <i class="fa fa-download" aria-hidden="true"></i>
+          <div class="btn-group" *ngIf="mode === 'edit-files' && element.file_type != 'folder'">
+            <a color="primary" class="waves-light" (click)="downloadFile(element)" mdbTooltip="Pobierz" container="body" placement="top">
+              <i class="fas fa-cloud-download-alt"></i>
             </a>
           </div>
 
-          <div class="btn-group" placement="right" *ngIf="user.role === 'admin' || user.role === 'moderator'" mdbDropdown>
+          <div class="btn-group" *ngIf="mode === 'edit-files'">
+            <a class="waves-light" (click)="openMoveDialog(element)" mdbTooltip="Przenieś" container="body" placement="top">
+              <i class="fas fa-folder-open"></i>
+            </a>
+          </div>
+
+          <div class="btn-group" *ngIf="mode === 'edit-files'">
+            <a class="waves-light" (click)="openRenameDialog(element)" mdbTooltip="Zmień nazwę" container="body" placement="top">
+              <i class="fas fa-pen"></i>
+            </a>
+          </div>
+
+          <div class="btn-group" *ngIf="mode === 'edit-files'">
+            <a class="waves-light text-red" (click)="deleteElement(element)" mdbTooltip="Usuń" container="body" placement="top">
+              <i class="far fa-trash-alt"></i>
+            </a>
+          </div>
+
+          <!-- <div class="btn-group" placement="right" *ngIf="mode === 'edit-files'" mdbDropdown>
             <a mdbDropdownToggle color="primary" class="waves-light" placement="right">
               <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
             </a>
@@ -114,7 +146,7 @@
                 <i class="fa fa-download" aria-hidden="true"></i>Pobierz
               </a>
             </div>
-          </div>
+          </div> -->
         </td>
       </tr>
       <tr mdbTableCol class="pusty-folder" *ngIf="(fileElements == null || fileElements == undefined || fileElements.length == 0) && !isLoadingData">
