--- a/src/app/sites/recruitment/recruitment.component.html
+++ b/src/app/sites/recruitment/recruitment.component.html
@@ -1,8 +1,8 @@
 <div class="view view-page-header">
   <div class="full-bg-img">
     <div class="mask flex-center rgba-blue-strong">
-      <div class="container">
-        <div class="white-text animated fadeIn">
+      <div class="container flex-center">
+        <div class="white-text animated fadeIn header-page-container">
 
           <h2 class="header-page">Rekrutacja</h2>
 
@@ -21,28 +21,16 @@
       <!-- page content start -->
       <div class="text-section text-section-first">
 
-        <!-- <h3 class="h-article">Zasady rekrutacji</h3> -->
-
-        <!-- <ul>
-          <li>Rekrutacja na studia podyplomowe "Technologie Internetowe" odbywa się bez egzaminów wstępnych,</li>
-          <li>O przyjęciu na studia decyduje kolejność zgłoszeń (po spełnieniu formalności procesu rekrutacji),</li>
-          <li>Termin składania podań na XIII edycję w roku akademickim 2018/2019 upływa dnia: <mark>30 września 2018
-              roku</mark>!</li>
-        </ul> -->
-
         <div class="row rules-cards">
 
           <div class="col-md-4 mb-1 animated fadeInRight" data-wow-delay="0s">
-            <!-- card-image  style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);" -->
             <div class="card mb-3">
 
               <!-- Content -->
               <div class="text-center d-flex align-items-center rgba-white-strong py-5 px-4">
                 <div>
                   <h3 class="card-icon"><i class="fa fa-check fa-3x" aria-hidden="true"></i></h3>
-                  <!-- <h3 class="card-title pt-2"><strong>This is card title</strong></h3> -->
                   <span>Rekrutacja na studia podyplomowe <b>Technologie Internetowe</b> odbywa się <b>bez egzaminów wstępnych</b></span>
-                  <!-- <a mdbBtn color="pink" class="waves-light" mdbWavesEffect><i class="fa fa-clone left"></i> View project</a> -->
                 </div>
               </div>
               <!-- Content -->
@@ -50,7 +38,6 @@
             <!-- Card -->
           </div>
           <div class="col-md-4 mb-1 animated fadeInRight" data-wow-delay="0.2s">
-            <!-- card-image  style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);" -->
             <div class="card  mb-3">
 
 
@@ -58,9 +45,7 @@
               <div class="text-center d-flex align-items-center rgba-white-strong py-5 px-4">
                 <div>
                   <h3 class="card-icon"><i class="fa fa-users fa-3x" aria-hidden="true"></i></h3>
-                  <!-- <h3 class="card-title pt-2"><strong>This is card title</strong></h3> -->
                   <span>O przyjęciu na studia decyduje kolejność zgłoszeń (po spełnieniu formalności procesu rekrutacji)</span>
-                  <!-- <a mdbBtn color="pink" class="waves-light" mdbWavesEffect><i class="fa fa-clone left"></i> View project</a> -->
                 </div>
               </div>
               <!-- Content -->
@@ -68,7 +53,6 @@
             <!-- Card -->
           </div>
           <div class="col-md-4 mb-1 animated fadeInRight" data-wow-delay="0.4s">
-            <!-- card-image  style="background-image: url(https://mdbootstrap.com/img/Photos/Horizontal/Work/4-col/img%20%2814%29.jpg);" -->
             <div class="card  mb-3">
 
 
@@ -76,9 +60,7 @@
               <div class="text-center d-flex align-items-center rgba-white-strong py-5 px-4">
                 <div>
                   <h3 class="card-icon"><i class="fa fa-calendar fa-3x" aria-hidden="true"></i></h3>
-                  <!-- <h3 class="card-title pt-2"><strong>This is card title</strong></h3> -->
                   <span>Już wkrótce <b>IX edycja</b> studiów podyplomowych, która odbędzie się w roku akademickim 2019/2020</span>
-                  <!-- <a mdbBtn color="pink" class="waves-light" mdbWavesEffect><i class="fa fa-clone left"></i> View project</a> -->
                 </div>
               </div>
               <!-- Content -->
@@ -86,8 +68,6 @@
             <!-- Card -->
           </div>
         </div>
-
-
 
       </div>
 
@@ -157,12 +137,13 @@
         </div>
 
       </div>
+
       <div class="icon-content">
      
       <div class="row text-section left-col-icon zlozenie-dokumentow" id="step1">
         <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
-            <i class="fa fa-file-text-o" aria-hidden="true"></i>
+            <i class="fas fa-file-alt" aria-hidden="true"></i>
           </h3>
         </div>
         <div class="col-sm-12 col-md-11">
@@ -188,7 +169,7 @@
       <div class="row text-section left-col-icon" id="step2">
         <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
-            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+            <i class="fas fa-university"></i>
           </h3>
         </div>
         <div class="col-sm-12 col-md-11">
@@ -211,7 +192,7 @@
       <div class="row text-section left-col-icon" id="step3">
         <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
-            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+            <i class="fas fa-user-circle" aria-hidden="true"></i>
           </h3>
         </div>
         <div class="col-sm-12 col-md-11">
@@ -229,6 +210,32 @@
          
       </div>
 
+      <div class="news-section">
+
+        <section class="my-3">
+
+          <h3 class="h-article animated wow fadeInUp">Aktualności</h3>
+
+          <!-- Article -->
+          <div class="row">
+
+            <div class="col-lg-12">
+
+              <p>19/08/2018</p>
+              <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+              <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+                placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis.</p>
+            
+            </div>
+
+          </div>
+
+          <hr class="my-3">
+
+        </section>
+
+      </div>
+
       <!-- END page content start -->
 
     </div>
@@ -237,3 +244,5 @@
   </div>
 
 </div>
+
+<app-footer-banner [type]="'basic'"></app-footer-banner>
