--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 // regular style toast
-@import '~ngx-toastr/toastr.css';
+@import '../node_modules/ngx-toastr/toastr.css';
+// @import '~ngx-toastr/toastr-bs4-alert';
 
 $view-page-header-height: 22vh;
 
@@ -25,6 +26,11 @@ a {
 a:hover {
   color: black;
 }
+
+// body::-webkit-scrollbar       {background: transparent; width:16px}
+// body::-webkit-scrollbar-track {background: transparent}
+// body::-webkit-scrollbar-thumb {background-color:#babac0;border-radius:16px;border:4px solid #fff}
+
 .h-article {
   padding: 1em 0;
   font-size: 1.6em;
@@ -41,9 +47,10 @@ a:hover {
   background-color: #2196f3;
 }
 .view-page-header .header-page {
-  padding-top: 9vh;
+  // padding-top: 9vh;
   padding-left: 15px;
   font-size: 1.8em;
+  margin-bottom: 0;
 }
 .icon-content .h-article {
   text-align: center;
@@ -99,12 +106,12 @@ a:hover {
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .navbar-dark {
-    background: none !important;
+    // background: none !important;
   }
   .view-page-header {
     // bg-img w #
-    background-image: url("/assets/stefan-stefancik-297983-unsplash.jpg");
-    background-position: 50% 45%;
+    background-image: url("https://images.unsplash.com/photo-1514996550219-62672472d03b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+    background-position: 0% 50%;
     background-repeat: no-repeat;
     height: $view-page-header-height; // 27
     // height: 100vh;
@@ -136,7 +143,7 @@ a:hover {
 
 .navbar {
   z-index: 10;
-  box-shadow: none !important;
+  // box-shadow: none !important;
 }
 #header-top .navbar {
   z-index: 12;
@@ -203,6 +210,11 @@ a:hover {
 .view-page-header .container {
   padding-left: 0;
   padding-right: 0;
+  margin-top: 76px;
+  height: calc(22vh - 76px);
+  .header-page-container {
+    width: 100%;
+  }
 }
 .view-page-100vh {
   height: 100vh;
@@ -321,6 +333,9 @@ a:hover {
 }
 .left-col-icon .icon-left h2 {
   text-align: center;
+}
+.page-container {
+  
 }
 
 
