--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -242,25 +242,25 @@
 
           <ul>
             <li class="wow fadeInRight" data-wow-delay="0s">
-              <i class="fa fa-university" aria-hidden="true"></i> Wysoko wykwalifikowana kadra naukowo–dydaktyczna
+              <i class="fas fa-university" aria-hidden="true"></i> Wysoko wykwalifikowana kadra naukowo–dydaktyczna
             </li>
             <li class="wow fadeInRight" data-wow-delay="0.1s">
-              <i class="fa fa-star" aria-hidden="true"></i> Atrakcyjny program studiów
+              <i class="fas fa-star" aria-hidden="true"></i> Atrakcyjny program studiów
             </li>
             <li class="wow fadeInRight" data-wow-delay="0.2s">
-              <i class="fa fa-desktop" aria-hidden="true"></i> Nowoczesna baza laboratoryjna
+              <i class="fas fa-desktop" aria-hidden="true"></i> Nowoczesna baza laboratoryjna
             </li>
             <li class="wow fadeInRight" data-wow-delay="0.3s">
-              <i class="fa fa-book" aria-hidden="true"></i> Specjalistyczne zbiory biblioteczne
+              <i class="fas fa-book" aria-hidden="true"></i> Specjalistyczne zbiory biblioteczne
             </li>
             <li class="wow fadeInRight" data-wow-delay="0.4s">
-              <i class="fa fa-database" aria-hidden="true"></i> Dostęp do światowych baz naukowych
+              <i class="fas fa-database" aria-hidden="true"></i> Dostęp do światowych baz naukowych
             </li>
             <li class="wow fadeInRight" data-wow-delay="0.5s">
-              <i class="fa fa-money" aria-hidden="true"></i> Dogodne warunki płatności
+              <i class="fas fa-dollar-sign"></i> Dogodne warunki płatności
             </li>
             <li class="wow fadeInRight" data-wow-delay="0.6s">
-              <i class="fa fa-black-tie" aria-hidden="true"></i> Kompetentna obsługa administracyjna
+              <i class="fas fa-user-tie"></i> Kompetentna obsługa administracyjna
             </li>
           </ul>
 
