--- a/src/app/sites/organisation/organisation.component.html
+++ b/src/app/sites/organisation/organisation.component.html
@@ -93,7 +93,7 @@
         <div class="row left-col-icon">
           <div class="wow col-sm-12 col-md-1 icon-left">
             <h2 class="h-article">
-              <i class="fa fa-mortar-board" aria-hidden="true"></i>
+              <i class="fas fa-university"></i>
             </h2>
           </div>
           <div class="col-sm-12 col-md-11">
@@ -124,7 +124,7 @@
         <div class="row left-col-icon left-col-icon-last">
           <div class="wow col-sm-12 col-md-1 icon-left">
             <h2 class="h-article">
-              <i class="fa fa-dollar" aria-hidden="true"></i>
+              <i class="fas fa-dollar-sign"></i>
             </h2>
           </div>
           <div class="col-sm-12 col-md-11">
