--- a/src/app/sites/panel/shared/files-manager/file-explorer/file-explorer.component.scss
+++ b/src/app/sites/panel/shared/files-manager/file-explorer/file-explorer.component.scss
@@ -145,8 +145,8 @@
 .fa-toggle-off {
   color: rgba(0,0,0,0.75);
 }
-#toolbar {
-  .navbar-nav .nav-link {
-    padding-left: 0;
-  }
-}
+// #toolbar {
+//   .navbar-nav .nav-link {
+//     padding-left: 0;
+//   }
+// }
