--- a/src/app/sites/panel/shared/files-manager/file-explorer/modals/upload-dialog/upload-dialog.component.html
+++ b/src/app/sites/panel/shared/files-manager/file-explorer/modals/upload-dialog/upload-dialog.component.html
@@ -51,5 +51,14 @@
     Anuluj
   </button>
   <!-- (click)="basicModal.hide()" -->
-  <button type="button" mdbBtn color="primary" class="relative waves-light" [disabled]="!canBeClosed" (click)="closeDialog()" mdbWavesEffect>{{ primaryButtonText }}</button>
+  <button 
+    type="button" 
+    mdbBtn 
+    color="primary" 
+    class="relative waves-light" 
+    [disabled]="!canBeClosed"
+    (click)="closeDialog()"
+    mdbWavesEffect>
+    {{ primaryButtonText }}
+  </button>
 </div>
