--- a/src/app/sites/panel/user/user.component.html
+++ b/src/app/sites/panel/user/user.component.html
@@ -15,7 +15,8 @@
   <div class="mt-3 mb-5">
   
     <div class="container">
-      <app-files></app-files>
+      <app-files-manager [mode]="mode">
+      </app-files-manager>
     </div>
 
   </div>
