--- a/src/app/shared/components/footer-banner/footer-banner.component.scss
+++ b/src/app/shared/components/footer-banner/footer-banner.component.scss
@@ -3,7 +3,7 @@
     color: white;
     background-image: url("https://images.unsplash.com/photo-1524508762098-fd966ffb6ef9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
     background-size: cover;
-    background-attachment: unset;
+    background-attachment: fixed;
     h2 {
         padding: 0.5em 0;
         font-size: 1.4rem;
